--- a/DayOpenDoors/DayOpenDoors.Android/DayOpenDoors.Android.csproj
+++ b/DayOpenDoors/DayOpenDoors.Android/DayOpenDoors.Android.csproj
@@ -102,5 +102,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\Trench.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\elevator.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
