--- a/DayOpenDoors/DayOpenDoors/DayOpenDoors.csproj
+++ b/DayOpenDoors/DayOpenDoors/DayOpenDoors.csproj
@@ -30,6 +30,9 @@
     <EmbeddedResource Update="CheckPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="CreateOrUpdatePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="InfoPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
