Maybe, it`s final?)

--- a/DayOpenDoors/DayOpenDoors.Android/DayOpenDoors.Android.csproj
+++ b/DayOpenDoors/DayOpenDoors.Android/DayOpenDoors.Android.csproj
@@ -118,10 +118,10 @@
     <AndroidResource Include="Resources\drawable\Way1.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\background.jpg" />
+    <AndroidResource Include="Resources\drawable\icon.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\icon.png" />
+    <AndroidResource Include="Resources\drawable\Background.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
