--- a/DayOpenDoors/DayOpenDoors.Android/DayOpenDoors.Android.csproj
+++ b/DayOpenDoors/DayOpenDoors.Android/DayOpenDoors.Android.csproj
@@ -146,5 +146,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\PlanBackground2.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\backgroud.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
