--- a/DayOpenDoors/DayOpenDoors.Android/DayOpenDoors.Android.csproj
+++ b/DayOpenDoors/DayOpenDoors.Android/DayOpenDoors.Android.csproj
@@ -152,5 +152,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\stairs.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Bird.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
